--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,6 +1,6 @@
 <!-- Page Header -->
 <!-- Set your background image for this header in the theme's configuration: index_cover -->
-<header class="intro-header" style="background-image: url('<%- config.headerimg %>')">
+<header class="intro-header" style="background-image: url('<%- config.headerimg %>');background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
