change some styles

--- a/layout/_partial/article-index.ejs
+++ b/layout/_partial/article-index.ejs
@@ -14,9 +14,11 @@
             </div>
         <%}%>
         <% if (item.headerimg && item.headerimg.length) {%>
-            <img src = "<%- item.headerimg%>" style="width:100%"/>
+            <div class="article-index-img">
+              <img src = "<%- item.headerimg%>" style="width:100%"/>
+            </div>
         <%}else{%>
-            
+
         <%}%>
 
     </a>
