--- a/source/css/article.styl
+++ b/source/css/article.styl
@@ -166,7 +166,7 @@ pre
   .deletion
     color #dc322f
 
-.container 
+.container
   h2
     marin 20px 0
    font-size 24px
@@ -184,3 +184,9 @@ pre
    font-size 14px
    font-style italic
    color #ababab
+
+.article-index-img
+  max-height 375px
+  overflow hidden
+  margin-top 10px
+  margin-bottom 10px
