--- a/layout/_partial/article-full.ejs
+++ b/layout/_partial/article-full.ejs
@@ -3,7 +3,8 @@
 <%
     var cover = item.cover || theme.index_cover;
 %>
-<header class="intro-header" style="background-image: <% if (page.headerimg) {%>url('../../../<%- page.headerimg %>')<% }else {%>url('<%- config.headerimg %>')<% } %>;background-size: cover;">
+<% var rg = /http/; var ishttplink = rg.test(page.headerimg);%>
+<header class="intro-header" style="background-image: <% if (page.headerimg && ishttplink) {%>url('<%- page.headerimg %>')<% }else {%>url('<%- config.headerimg %>')<% } %>;background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
