--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -10,7 +10,8 @@
 
 <!-- Page Header -->
 <!-- Set your background image for this header in the theme's configuration: index_cover -->
-<header class="intro-header" style="background-image: <% if (page.headerimg) {%>url('../../../<%- page.headerimg %>')<% }else {%>url('<%- config.headerimg %>')<% } %>; background-size: cover;">
+<% var rg = /http/; var ishttplink = rg.test(page.headerimg);%>
+<header class="intro-header" style="background-image: <% if (page.headerimg && ishttplink) {%>url('<%- page.headerimg %>')<% }else {%>url('<%- config.headerimg %>')<% } %>; background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -34,4 +35,3 @@
         </div>
     </div>
 </div>
-
