--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -65,7 +65,7 @@ hr.small
   z-index 3
   @extend .sans-serif
   .navbar-brand
-    font-weight 800
+    font-weight lighter
   .nav
     li
       a
@@ -200,7 +200,6 @@ hr.small
     color gray
     font-size 16px
     margin-top 0
-    font-style italic
     &.archive
       font-size 16px
     > a
@@ -212,8 +211,8 @@ hr.small
   @media only screen and (min-width: 768px)
     > a
       > .post-title
-        font-size 25px
-        font-weight bold
+        font-size 23px
+
 
 .section-heading
   font-size 36px
